# CMatrix

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: cmatrix.hpp
src/: CMakeLists.txt  cmatrix.cpp  matrix.cpp  matrix.hpp  matrixClass.hpp  operations.hpp  specialMatrices.cpp  specialMatrices.hpp
tests/: CMakeLists.txt  test-01.cpp
